--- a/app/src/main/res/layout/ffrag0.xml
+++ b/app/src/main/res/layout/ffrag0.xml
@@ -3,46 +3,48 @@
     android:id="@+id/rlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical">
 
-    <ScrollView
-        android:id="@+id/scrollView"
+    <EditText
+        android:id="@+id/ff_text_input"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:editable="false"
+        android:text="@string/default_city"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
+        android:textSize="25sp"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/ff_text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ff_text_input"
+        android:text="@string/weather"
+        android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
+
+    <Button
+        android:id="@+id/ff_btn_0"
+        style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/ff_text_view"
+        android:text="@string/ff0_btn_0_title" />
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
-                android:text="Moscow"
-                android:id="@+id/ff_text_input"
-                android:layout_alignParentStart="true"
-                android:editable="true"
-                android:textSize="25dp" />
-
-            <TextView
-                android:id="@+id/ff_text_view"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
-                android:text="Погода"
-                android:layout_below="@+id/ff_text_input"
-                android:layout_alignParentStart="true" />
-
-            <Button
-                android:id="@+id/ff_btn_0"
-                style="@android:style/Widget.Holo.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ff0_btn_0_title"
-                android:layout_below="@+id/ff_text_view"
-                android:layout_alignParentEnd="true" />
-
-        </RelativeLayout>
-    </ScrollView>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/fragment_class_name"
+        android:id="@+id/txt_frag_class"
+        android:layout_below="@+id/ff_btn_0"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
