Application class менеджер для сохранения/загрузки погоды

--- a/app/src/main/res/layout/appwidget.xml
+++ b/app/src/main/res/layout/appwidget.xml
@@ -9,14 +9,15 @@
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
-        <TextClock
+        <TextView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            android:layout_height="wrap_content"
+            android:id="@+id/weather"/>
 
         <Button
             android:id="@+id/btn_wdgt"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:text="Btn" />
     </LinearLayout>
 </FrameLayout>
